--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
+    "bootstrap": "^4.6.0",
     "crypto-js": "^4.1.1",
     "encrypt-storage": "^2.12.16",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.0",
     "js-cookie": "^3.0.5",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
@@ -19,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.2.2",
     "react-spinners": "^0.13.8",
+    "reactstrap": "^9.1.10",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
